# TKB

./: .gitignore  AI_APP_CONTEXT.md  AUTO_UPDATE.md  DESKTOP.md  DESKTOP_AUDIT.md  HOW_TO_RELEASE.md  README.md  TKB.xls  check.cjs  convert.cjs  eslint.config.js  migrate-seed.cjs  package-lock.json  package.json  read.cjs  read_excel.py  tkb-2026.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vite.desktop.config.ts
.github/workflows/: deploy-cpanel.yml  desktop-release.yml
.lovable/: plan.md
.vercel/output/: nitro.json
.vercel/output/functions/__server.func/: _tanstack-start-manifest_v-BAWDKpJy.mjs  index.mjs
.vercel/output/static/assets/: AppLayout-DK_6UMDO.js  alert-tkH_pCvP.js  assignments-kVjouoDJ.js  badge-CPVgSf85.js  card-BqpdS55A.js  index-JRmqAEY_.js  label-D1Lbl0iH.js  login-CsOac1MI.js  (+11 more)
desktop/: index.html
desktop/src/: main.tsx
public/: TKB_Template.xlsx
scripts/: build-desktop-windows.cmd
src/: desktop.tsx  routeTree.gen.ts  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AppLayout.tsx  SetupWizard.tsx
src/components/timetable/: TimetableAll.tsx
src/lib/: keys.ts
src/lib/auth/: fetcher.ts  store.ts
src/lib/timetable/: excelFiles.ts  exportExcel.ts  scheduler.ts  seed.ts  store.ts  types.ts
src/routes/: __root.tsx  activate.tsx  assignments.tsx  index.tsx  login.tsx  print-all.tsx  schools.tsx  settings.tsx  subjects.tsx  teachers.tsx  timetable.tsx
updates/: README.md  latest.json
(+39 files in other folders)
