[package]
name = "tkb-thcs"
version = "0.3.0"
description = "TKB THCS desktop app"
authors = ["TKB THCS"]
edition = "2021"

[lib]
name = "tkb_thcs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"


